[package]
name = "minsol"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bs58 = "0.5.1"
clap = { version = "4.5.43", features = ["derive"] }
solana-client = "2.3.6"
solana-sdk = "2.3.1"
tokio = { version = "1", features = ["full"] }
colored = "2"
figlet-rs = "0.1"
solana-system-interface = "2.0.0"
