[package]
name = "minsol"             
version = "0.1.0"                 
edition = "2024"
authors = ["Ajeyakumara K,ajeyakumara07@gmail.com"]
description = "A minimal CLI for interacting with the Solana blockchain"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ajey35/MiniSolanaCLI"
keywords = ["solana", "cli", "blockchain"]
categories = ["command-line-utilities"]
homepage = "https://github.com/ajey35/MiniSolanaCLI"

[dependencies]
anyhow = "1.0.98"
bs58 = "0.5.1"
clap = { version = "4.5.43", features = ["derive"] }
solana-client = "2.3.6"
solana-sdk = "2.3.1"
tokio = { version = "1", features = ["full"] }
colored = "2"
figlet-rs = "0.1"
solana-system-interface = "2.0.0"
